--- a/dpr.html
+++ b/dpr.html
@@ -7,5 +7,25 @@
 	<script>
 		document.write(window.devicePixelRatio);
 	</script>
+	<br>Window WxH:
+	<script>
+	document.write(window.width + "x" + window.height);
+	</script>
+	<br>Window Inner WxH:
+	<script>
+	document.write(window.innerWidth + "x" + window.innerHeight);
+	</script>
+	<br>Window Outer WxH:
+	<script>
+	document.write(window.outerWidth + "x" + window.outerHeight);
+	</script>
+	<br>Screen WxH:
+	<script>
+	document.write(window.screen.width + "x" + window.screen.height);
+	</script>
+	<br>Screen Avail WxH:
+	<script>
+	document.write(window.screen.availWidth + "x" + window.screen.availHeight);
+	</script>
 </body>
 </html>
