--- a/dpr-meta.html
+++ b/dpr-meta.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 </head>
 <body>
+	<h1> With Meta Tag</h1>
 	Device Pixel Ratio: 
 	<script>
 		document.write(window.devicePixelRatio);
