--- a/dpr.html
+++ b/dpr.html
@@ -27,5 +27,10 @@
 	<script>
 	document.write(window.screen.availWidth + "x" + window.screen.availHeight);
 	</script>
+	<br><br>document.documentElement WxH:
+	<script>
+		document.write(document.documentElement.width + "x" + document.documentElement.height);
+	</script>
+		
 </body>
 </html>
