--- a/dpr.html
+++ b/dpr.html
@@ -27,9 +27,9 @@
 	<script>
 	document.write(window.screen.availWidth + "x" + window.screen.availHeight);
 	</script>
-	<br><br>document.documentElement WxH:
+	<br><br>document.documentElement.client* WxH:
 	<script>
-		document.write(document.documentElement.width + "x" + document.documentElement.height);
+		document.write(document.documentElement.clientWidth + "x" + document.documentElement.clientHeight);
 	</script>
 		
 </body>
