--- a/dpr-meta.html
+++ b/dpr-meta.html
@@ -29,5 +29,9 @@
 	<script>
 	document.write(window.screen.availWidth + "x" + window.screen.availHeight);
 	</script>
+	<br><br>document.documentElement.client* WxH:
+	<script>
+		document.write(document.documentElement.clientWidth + "x" + document.documentElement.clientHeight);
+	</script>
 </body>
 </html>
